# digital_image_processing

./: .gitignore  CMakeLists.txt  readme.md
include/: image.h
note/: Chapter1.md
source/: image.cpp  main.cpp  test.cpp
